Added UI to RPS game

--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS</title>
-    <script src="rock-paper-scissors.js"></script>
 </head>
 <body>
+    <div class="buttons-container">
+        <button value="rock">ROCK</button>
+        <button value="paper">PAPER</button>
+        <button value="scissors">SCISSORS</button>
+    </div>
+    <div class="results"></div>
+    <script src="rock-paper-scissors.js"></script>
+
 </body>
 </html>
